--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <img src="photos/images/rectangle.png" alt="" id="img_brick">
 
     <canvas id="gameScreen" width="800" height="680"></canvas>
-
-    <script src="js/main.js" type="text/javascript"></script>
+    <script src="/bundle.js" type="text/javascript"></script>
     
 </body>
 </html>
