--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>parcel javascript</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    
+
 </head>
+
 <body>
 
-    <img src="photos/images/ball.png" alt="" id="img_ball" >
+    <img src="photos/images/ball.png" alt="" id="img_ball">
 
     <img src="photos/images/rectangle.png" alt="" id="img_brick">
 
     <canvas id="gameScreen" width="800" height="680"></canvas>
-    <script src="/bundle.js" type="text/javascript"></script>
-    
+
+    <script src="/main.js" type="module"></script>
+
+    <!-- 
+        to start up browserify 
+    /**-------------------------------- ------------------------------
+        browserify {file name}.js -o {name of the file to be sent}.js
+    **----------------------------------------------------------------
+    -->
 </body>
+
 </html>
