--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
 
     <img src="photos/images/rectangle.png" alt="" id="img_brick">
 
-    <canvas id="gameScreen" width="800" height="680"></canvas>
-
+    <canvas id="gameScreen" width="900" height="600"></canvas>
+    <section>
+        <div class="h1">best score</div>
+        <div class="h2">34 points</div>
+        <h1>your score</h1>
+        <p>22 points</p>
+        <div class="p">you have x lives left</div>
+        <button>start over</button>
+    </section>
     <script src="/main.js" type="module"></script>
 
     <!-- 
