modifying the DOM

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
 
-    <img src="photos/images/ball.png" alt="" id="img_ball">
+    <img src="photos/ball.png" alt="" id="img_ball">
 
-    <img src="photos/images/rectangle.png" alt="" id="img_brick">
+    <img src="photos/rectangle.png" alt="" id="img_brick">
 
     <canvas id="gameScreen" width="900" height="600"></canvas>
     <section>
@@ -30,7 +30,8 @@
     <!-- 
         to start up browserify 
     /**-------------------------------- ------------------------------
-        browserify {file name}.js -o {name of the file to be sent}.js
+        browserify {file name}.js -o {name of the file to be sent}.js 
+        browserify JS/main.js -o main.js
     **----------------------------------------------------------------
     -->
 </body>
