--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="h2">34 points</div>
         <h1>your score</h1>
         <p>22 points</p>
-        <div class="p">you have x lives left</div>
+        <div class="p">you have <span>3</span> lives left</div>
         <button>start over</button>
     </section>
     <script src="/main.js" type="module"></script>
