adding the brick

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 
     <img src="photos/ball.png" alt="" id="img_ball">
 
-    <img src="photos/rectangle.png" alt="" id="img_brick">
+    <img src="photos/brick.jpg" alt="" id="img_brick">
 
     <canvas id="gameScreen" width="900" height="600"></canvas>
     <section>
         <div class="best-score">
             <h1><i class="fa fa-trophy" aria-hidden="true"></i> best score : </h1>
-            <span>34 points</span>
+            <span>0 points</span>
         </div>
         <div class="your-score">
             <h1><i class="fa fa-crop" aria-hidden="true"></i> your score : </h1>
-            <span>22 points</span>
+            <span>0 points</span>
         </div> 
         <div class="level">
             <h1><i class="fa fa-level-up" aria-hidden="true"></i> your level : </h1>
